--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hcaptcha/react-hcaptcha": "^1.12.1",
     "@hookform/resolvers": "^3.9.1",
+    "@marsidev/react-turnstile": "^1.3.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
